add only-allow to global env

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,6 +48,7 @@ commands:
             sudo yarn global add pnpm
             sudo pnpm add npm@7.19.1 --global
             sudo pnpm add firebase-tools@9.16.0 --global
+            sudo pnpm add only-allow --global
             sudo pnpm add semver --global
 
   # & Download/Restore pnpm-lock.yaml cache
