--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "bash": "docker build --build-arg USER_ID=$(id -u) --build-arg GROUP_ID=$(id -g) -f Dockerfile -t polar . && docker run -v $(pwd):/polar-app:delegated -w /polar-app -u $(id -u ${USER}):$(id -g ${USER}) -e WEBPACK_BUNDLE=repository -p 8050:8050 -p 8051:8051 -ti --rm --init --ulimit memlock=819200000:819200000 polar bash",
     "eslint-all": "pnpm m run eslint --no-bail",
     "eslint-ci-all": "pnpm m run eslint-ci --no-bail",
-    "compile-all": "pnpm m run run compile",
+    "compile-all": "pnpm m run compile",
     "test-all": "pnpm m run test",
     "test-ci-all": "pnpm m run test-ci",
     "karma-all": "pnpm m run karma",
