update vscode config

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -128,7 +128,7 @@
       "italic": false
     }
   ],
-  "eslint.workingDirectories": [{ "mode": "auto" }],
+  //"eslint.workingDirectories": [{ "mode": "auto" }],
   "files.exclude": {
     ".pytest_cache": true,
     ".pnpm-store": true,
