remove dead dependencies

--- a/packages/polar-cloud-progress/package.json
+++ b/packages/polar-cloud-progress/package.json
@@ -21,11 +21,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/file-saver": "=2.0.3",
-    "polar-eslint": "0.0.0",
-    "polar-karma": "0.0.0",
-    "polar-typescript": "0.0.0",
-    "polar-webpack": "0.0.0"
+    "@types/file-saver": "=2.0.3"
   },
   "dependencies": {
     "polar-shared": "0.0.0",
