--- a/packages/polar-create-module/package.json
+++ b/packages/polar-create-module/package.json
@@ -25,10 +25,5 @@
   },
   "author": "Polar",
   "license": "ISC",
-  "devDependencies": {
-    "polar-eslint": "0.0.0",
-    "polar-karma": "0.0.0",
-    "polar-typescript": "0.0.0",
-    "polar-webpack": "0.0.0"
-  }
+  "devDependencies": {}
 }
