--- a/packages/polar-migration-block-annotations/package.json
+++ b/packages/polar-migration-block-annotations/package.json
@@ -23,11 +23,7 @@
     "@types/chai": "4.2.11",
     "@types/mocha": "=9.0.0",
     "chai": "4.2.0",
-    "mocha": "=9.1.1",
-    "polar-eslint": "0.0.0",
-    "polar-karma": "0.0.0",
-    "polar-typescript": "0.0.0",
-    "polar-webpack": "0.0.0"
+    "mocha": "=9.1.1"
   },
   "dependencies": {
     "polar-shared": "0.0.0",
