--- a/packages/polar-admin/package.json
+++ b/packages/polar-admin/package.json
@@ -21,11 +21,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "firebase-tools": "=9.16.0",
-    "polar-eslint": "0.0.0",
-    "polar-karma": "0.0.0",
-    "polar-typescript": "0.0.0",
-    "polar-webpack": "0.0.0"
+    "firebase-tools": "=9.16.0"
   },
   "dependencies": {
     "@google-cloud/firestore": "=4.15.1",
