--- a/packages/polar-backend-datastore/package.json
+++ b/packages/polar-backend-datastore/package.json
@@ -22,10 +22,5 @@
     "polar-bookshelf": "0.0.0",
     "polar-shared": "0.0.0"
   },
-  "devDependencies": {
-    "polar-eslint": "0.0.0",
-    "polar-typescript": "0.0.0",
-    "polar-karma": "0.0.0",
-    "polar-webpack": "0.0.0"
-  }
+  "devDependencies": {}
 }
