--- a/packages/polar-doc-preview-loader/package.json
+++ b/packages/polar-doc-preview-loader/package.json
@@ -26,11 +26,7 @@
     "@types/node": "=14.17.9",
     "chai": "4.2.0",
     "mocha": "=9.1.1",
-    "polar-eslint": "0.0.0",
-    "polar-karma": "0.0.0",
-    "polar-test": "0.0.0",
-    "polar-typescript": "0.0.0",
-    "polar-webpack": "0.0.0"
+    "polar-test": "0.0.0"
   },
   "dependencies": {
     "@google-cloud/tasks": "=1.9.0",
