--- a/packages/polar-dom-text-search/package.json
+++ b/packages/polar-dom-text-search/package.json
@@ -27,11 +27,7 @@
     "chai": "4.2.0",
     "jsdom": "=16.7.0",
     "jsdom-global": "3.0.2",
-    "mocha": "=9.1.1",
-    "polar-eslint": "0.0.0",
-    "polar-karma": "0.0.0",
-    "polar-typescript": "0.0.0",
-    "polar-webpack": "0.0.0"
+    "mocha": "=9.1.1"
   },
   "dependencies": {
     "@types/node": "=14.17.9",
