--- a/packages/polar-epub-generator/package.json
+++ b/packages/polar-epub-generator/package.json
@@ -24,11 +24,7 @@
     "@types/mocha": "=9.0.0",
     "@types/node": "=14.17.9",
     "mocha": "=9.1.1",
-    "polar-eslint": "0.0.0",
-    "polar-karma": "0.0.0",
-    "polar-test": "0.0.0",
-    "polar-typescript": "0.0.0",
-    "polar-webpack": "0.0.0"
+    "polar-test": "0.0.0"
   },
   "dependencies": {
     "jszip": "=3.7.1",
