--- a/packages/polar-hooks/package.json
+++ b/packages/polar-hooks/package.json
@@ -37,10 +37,5 @@
     "polar-webapp-dist": "0.0.0",
     "uuid": "3.3.3"
   },
-  "devDependencies": {
-    "polar-eslint": "0.0.0",
-    "polar-karma": "0.0.0",
-    "polar-typescript": "0.0.0",
-    "polar-webpack": "0.0.0"
-  }
+  "devDependencies": {}
 }
