--- a/packages/polar-html/package.json
+++ b/packages/polar-html/package.json
@@ -25,11 +25,7 @@
     "@types/sanitize-html": "=2.5.0",
     "chai": "4.2.0",
     "mocha": "=9.1.1",
-    "polar-eslint": "0.0.0",
-    "polar-karma": "0.0.0",
-    "polar-test": "0.0.0",
-    "polar-typescript": "0.0.0",
-    "polar-webpack": "0.0.0"
+    "polar-test": "0.0.0"
   },
   "dependencies": {
     "sanitize-html": "=2.5.3"
