--- a/packages/polar-images/package.json
+++ b/packages/polar-images/package.json
@@ -28,10 +28,6 @@
     "chai": "4.2.0",
     "exif-js": "=2.3.0",
     "mocha": "=9.1.1",
-    "polar-eslint": "0.0.0",
-    "polar-karma": "0.0.0",
-    "polar-test": "0.0.0",
-    "polar-typescript": "0.0.0",
-    "polar-webpack": "0.0.0"
+    "polar-test": "0.0.0"
   }
 }
