--- a/packages/polar-npm/package.json
+++ b/packages/polar-npm/package.json
@@ -27,11 +27,7 @@
   },
   "devDependencies": {
     "@types/node": "=14.17.9",
-    "@types/pdfjs-dist": "2.1.71-polar.2",
-    "polar-eslint": "0.0.0",
-    "polar-karma": "0.0.0",
-    "polar-typescript": "0.0.0",
-    "polar-webpack": "0.0.0"
+    "@types/pdfjs-dist": "2.1.71-polar.2"
   },
   "dependencies": {
     "polar-shared": "0.0.0"
