--- a/packages/polar-page-metadata-parser/package.json
+++ b/packages/polar-page-metadata-parser/package.json
@@ -26,11 +26,7 @@
     "@types/mocha": "=9.0.0",
     "chai": "4.2.0",
     "jsdom": "=16.7.0",
-    "mocha": "=9.1.1",
-    "polar-eslint": "0.0.0",
-    "polar-karma": "0.0.0",
-    "polar-typescript": "0.0.0",
-    "polar-webpack": "0.0.0"
+    "mocha": "=9.1.1"
   },
   "dependencies": {
     "@types/node": "=14.17.9",
