--- a/packages/polar-pdf/package.json
+++ b/packages/polar-pdf/package.json
@@ -25,11 +25,7 @@
     "@types/jsdom": "=16.2.13",
     "@types/mocha": "=9.0.0",
     "chai": "4.2.0",
-    "mocha": "=9.1.1",
-    "polar-eslint": "0.0.0",
-    "polar-karma": "0.0.0",
-    "polar-typescript": "0.0.0",
-    "polar-webpack": "0.0.0"
+    "mocha": "=9.1.1"
   },
   "dependencies": {
     "@types/node": "=14.17.9",
