--- a/packages/polar-readability/package.json
+++ b/packages/polar-readability/package.json
@@ -24,12 +24,8 @@
     "@types/mocha": "=9.0.0",
     "chai": "4.2.0",
     "mocha": "=9.1.1",
-    "polar-eslint": "0.0.0",
-    "polar-karma": "0.0.0",
     "polar-shared": "0.0.0",
-    "polar-test": "0.0.0",
-    "polar-typescript": "0.0.0",
-    "polar-webpack": "0.0.0"
+    "polar-test": "0.0.0"
   },
   "dependencies": {
     "readability": "0.2.0-polar.2"
