--- a/packages/polar-release-metadata/package.json
+++ b/packages/polar-release-metadata/package.json
@@ -29,11 +29,7 @@
     "@types/mocha": "=9.0.0",
     "@types/semver": "=7.3.8",
     "chai": "4.2.0",
-    "mocha": "=9.1.1",
-    "polar-eslint": "0.0.0",
-    "polar-karma": "0.0.0",
-    "polar-typescript": "0.0.0",
-    "polar-webpack": "0.0.0"
+    "mocha": "=9.1.1"
   },
   "dependencies": {
     "@types/node": "=14.17.9",
