--- a/packages/polar-sentry-cloud-functions/package.json
+++ b/packages/polar-sentry-cloud-functions/package.json
@@ -25,11 +25,7 @@
     "@types/mocha": "=9.0.0",
     "chai": "4.2.0",
     "mocha": "=9.1.1",
-    "polar-eslint": "0.0.0",
-    "polar-karma": "0.0.0",
-    "polar-test": "0.0.0",
-    "polar-typescript": "0.0.0",
-    "polar-webpack": "0.0.0"
+    "polar-test": "0.0.0"
   },
   "dependencies": {
     "@google-cloud/functions-framework": "=1.7.1",
