--- a/packages/polar-web-extension-api/package.json
+++ b/packages/polar-web-extension-api/package.json
@@ -26,11 +26,7 @@
     "@types/chrome": "0.0.114",
     "@types/mocha": "=9.0.0",
     "chai": "4.2.0",
-    "mocha": "=9.1.1",
-    "polar-eslint": "0.0.0",
-    "polar-karma": "0.0.0",
-    "polar-typescript": "0.0.0",
-    "polar-webpack": "0.0.0"
+    "mocha": "=9.1.1"
   },
   "dependencies": {
     "@types/karma": "=5.0.1",
