--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,7 @@ tsconfig.tsbuildinfo
 # Compile test reports
 TESTS*.xml
 test_results.xml
+
+# local testing scripts to ignore
+scripts/test.sh
+scripts/node-script.js
