--- a/packages/polar-bookshelf/package.json
+++ b/packages/polar-bookshelf/package.json
@@ -215,6 +215,10 @@
     "use-local-storage-state": "=6.0.0",
     "uuid": "3.3.3",
     "typemoq": "=2.1.0",
-    "throttle-debounce": "=3.0.1"
+    "throttle-debounce": "=3.0.1",
+    "@types/react": "=17.0.2",
+    "@types/react-dom": "=17.0.2",
+    "react": "=17.0.2",
+    "react-dom": "=17.0.2"
   }
 }
