--- a/packages/polar-ui-framework/package.json
+++ b/packages/polar-ui-framework/package.json
@@ -29,7 +29,11 @@
   },
   "dependencies": {
     "polar-shared": "0.0.0",
-    "polar-react": "0.0.0",
-    "polar-mui": "0.0.0"
+    "@types/react": "=17.0.2",
+    "@types/react-dom": "=17.0.2",
+    "react": "=17.0.2",
+    "react-dom": "=17.0.2",
+    "@material-ui/core": "=4.11.3",
+    "@material-ui/icons": "=4.11.2"
   }
 }
