add missing dependencies to all but polar-bookshelf

--- a/packages/polar-backend-datastore/package.json
+++ b/packages/polar-backend-datastore/package.json
@@ -20,7 +20,8 @@
   "license": "ISC",
   "dependencies": {
     "polar-bookshelf": "0.0.0",
-    "polar-shared": "0.0.0"
+    "polar-shared": "0.0.0",
+    "@material-ui/styles": "=4.11.4"
   },
   "devDependencies": {}
 }
