--- a/packages/polar-answers/package.json
+++ b/packages/polar-answers/package.json
@@ -38,7 +38,9 @@
     "polar-pdf": "0.0.0",
     "polar-shared": "0.0.0",
     "polar-cache": "0.0.0",
-    "polar-epub": "0.0.0"
+    "polar-epub": "0.0.0",
+    "firebase-functions": "=3.16.0",
+    "@google-cloud/storage": "=5.16.0"
   },
   "files": [
     "**/*.js",
