--- a/packages/polar-cache/package.json
+++ b/packages/polar-cache/package.json
@@ -29,7 +29,9 @@
   "dependencies": {
     "polar-firebase-admin": "0.0.0",
     "polar-firebase": "0.0.0",
-    "polar-shared": "0.0.0"
+    "polar-shared": "0.0.0",
+    "firebase-functions": "=3.16.0",
+    "@google-cloud/storage": "=5.16.0"
   },
   "files": [
     "**/*.js",
