--- a/packages/polar-cdk/package.json
+++ b/packages/polar-cdk/package.json
@@ -44,6 +44,8 @@
     "polar-firebase-admin": "0.0.0",
     "polar-answers": "0.0.0",
     "source-map-support": "=0.5.19",
-    "@elastic/elasticsearch": "=7.13.0"
+    "@elastic/elasticsearch": "=7.13.0",
+    "@google-cloud/storage": "=5.16.0",
+    "@aws-cdk/aws-logs": "=1.132.0"
   }
 }
