--- a/packages/polar-desktop-app/package.json
+++ b/packages/polar-desktop-app/package.json
@@ -55,7 +55,8 @@
     "electron-updater": "=4.3.8",
     "mocha": "=9.1.1",
     "null-loader": "=4.0.1",
-    "source-map-support": "=0.5.19"
+    "source-map-support": "=0.5.19",
+    "builder-util-runtime": "=8.9.2"
   },
   "dependencies": {
     "polar-bookshelf": "0.0.0",
