--- a/packages/polar-doc-preview-loader/package.json
+++ b/packages/polar-doc-preview-loader/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "@google-cloud/tasks": "=1.9.0",
     "firebase-admin": "=10.0.0",
+    "firebase-functions": "=3.16.0",
     "polar-firebase": "0.0.0",
     "polar-firebase-admin": "0.0.0",
     "polar-shared": "0.0.0",
