--- a/packages/polar-hooks/functions/package.json
+++ b/packages/polar-hooks/functions/package.json
@@ -81,7 +81,8 @@
     "prompts": "=2.4.1",
     "stripe": "=8.119.0",
     "uuid": "3.3.3",
-    "yargs": "=15.3.1"
+    "yargs": "=15.3.1",
+    "@sentry/node": "6.15.0"
   },
   "devDependencies": {
     "@types/archiver": "=5.1.1",
