--- a/packages/polar-private-beta/package.json
+++ b/packages/polar-private-beta/package.json
@@ -36,7 +36,8 @@
     "polar-private-beta-api": "0.0.0",
     "polar-rpc": "0.0.0",
     "polar-sendgrid": "0.0.0",
-    "polar-firestore-like": "0.0.0"
+    "polar-firestore-like": "0.0.0",
+    "firebase-functions": "=3.16.0"
   },
   "files": [
     "**/*.js",
