--- a/packages/polar-web-extension/package.json
+++ b/packages/polar-web-extension/package.json
@@ -37,7 +37,8 @@
     "readability": "0.2.0-polar.2",
     "polar-page-metadata-parser": "0.0.0",
     "polar-web-capture": "0.0.0",
-    "polar-backend-datastore": "0.0.0"
+    "polar-backend-datastore": "0.0.0",
+    "jszip": "=3.7.1"
   },
   "devDependencies": {
     "@types/chai": "4.2.11",
