--- a/packages/polar-bookshelf/package.json
+++ b/packages/polar-bookshelf/package.json
@@ -220,6 +220,11 @@
         "@types/react-dom": "=17.0.2",
         "react": "=17.0.2",
         "react-dom": "=17.0.2",
-        "@material-ui/styles": "=4.11.4"
+        "@material-ui/styles": "=4.11.4",
+        "re-resizable": "=6.6.1",
+        "@nivo/core": "=0.61.0",
+        "electron": "=12.0.2",
+        "electron-updater": "=4.3.8",
+        "builder-util-runtime": "=8.9.2"
     }
 }
