--- a/packages/polar-hooks/package.json
+++ b/packages/polar-hooks/package.json
@@ -36,7 +36,7 @@
     "polar-firebase": "0.0.0",
     "polar-webapp-dist": "0.0.0",
     "uuid": "3.3.3",
-    "firebase-functions": "3.16.0",
+    "firebase-functions": "=3.16.0",
     "@sentry/node": "6.15.0",
     "@google-cloud/storage": "=5.8.5"
   },
