--- a/packages/polar-web-extension/package.json
+++ b/packages/polar-web-extension/package.json
@@ -50,7 +50,9 @@
     "polar-firebase-test": "0.0.0",
     "polar-firebase-browser": "0.0.0",
     "chai": "4.2.0",
-    "mocha": "=9.1.1"
+    "mocha": "=9.1.1",
+    "react": "=17.0.2",
+    "react-dom": "17.0.2"
   },
   "files": [
     "package.json"
