--- a/packages/polar-epub/package.json
+++ b/packages/polar-epub/package.json
@@ -29,6 +29,7 @@
     "epubjs": "=0.3.89-polar.21",
     "fast-xml-parser": "=3.19.0",
     "node-stream-zip": "=1.14.0",
+    "jsdom": "=16.7.0",
     "polar-shared": "0.0.0"
   }
 }
