--- a/packages/polar-bookshelf/package.json
+++ b/packages/polar-bookshelf/package.json
@@ -198,6 +198,7 @@
         "react-moment": "=0.9.7",
         "react-rnd": "=10.2.3",
         "react-router-dom": "=5.2.0",
+        "react-router": "=5.2.0",
         "react-spring": "=8.0.27",
         "react-summernote": "=2.0.2",
         "react-teleporter": "=2.1.1",
@@ -225,6 +226,7 @@
         "@nivo/core": "=0.61.0",
         "electron": "=12.0.2",
         "electron-updater": "=4.3.8",
-        "builder-util-runtime": "=8.9.2"
+        "builder-util-runtime": "=8.9.2",
+        "universal-analytics": "=0.5.0"
     }
 }
