--- a/packages/polar-web-extension/package.json
+++ b/packages/polar-web-extension/package.json
@@ -52,7 +52,7 @@
     "chai": "4.2.0",
     "mocha": "=9.1.1",
     "react": "=17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "=17.0.2"
   },
   "files": [
     "package.json"
