--- a/packages/polar-web-extension/package.json
+++ b/packages/polar-web-extension/package.json
@@ -53,7 +53,8 @@
     "mocha": "=9.1.1",
     "react": "=17.0.2",
     "react-dom": "=17.0.2",
-    "react-router-dom": "=5.2.0"
+    "react-router-dom": "=5.2.0",
+    "pdfjs-dist": "=2.8.250-polar.4"
   },
   "files": [
     "package.json"
