--- a/packages/polar-bookshelf/package.json
+++ b/packages/polar-bookshelf/package.json
@@ -188,6 +188,7 @@
     "polar-spaced-repetition": "0.0.0",
     "polar-spaced-repetition-api": "0.0.0",
     "polar-text-highlighter": "0.0.0",
+    "polar-test": "0.0.0",
     "polar-web-extension-api": "0.0.0",
     "polar-webapp-links": "0.0.0",
     "@material-ui/core": "=4.11.3",
