--- a/packages/polar-web-extension/package.json
+++ b/packages/polar-web-extension/package.json
@@ -32,6 +32,7 @@
     "polar-epub-generator": "0.0.0",
     "polar-firebase-browser": "0.0.0",
     "polar-html": "0.0.0",
+    "polar-test": "0.0.0",
     "polar-react": "0.0.0",
     "polar-shared": "0.0.0",
     "polar-web-extension-api": "0.0.0",
