--- a/packages/polar-bookshelf/package.json
+++ b/packages/polar-bookshelf/package.json
@@ -99,7 +99,8 @@
         "timekeeper": "2.2.0",
         "userflow.js": "=2.2.0",
         "wait-for-expect": "3.0.1",
-        "workbox-cli": "=5.1.3"
+        "workbox-cli": "=5.1.3",
+        "polar-test": "0.0.0"
     },
     "dependencies": {
         "@antv/g6": "=4.3.5",
