--- a/packages/polar-desktop-app/package.json
+++ b/packages/polar-desktop-app/package.json
@@ -59,11 +59,12 @@
     "polar-karma": "0.0.0",
     "polar-typescript": "0.0.0",
     "polar-webpack": "0.0.0",
-    "source-map-support": "=0.5.19"
+    "source-map-support": "=0.5.19",
   },
   "dependencies": {
     "polar-bookshelf": "0.0.0",
-    "polar-shared": "0.0.0"
+    "polar-shared": "0.0.0",
+    "polar-electron-framework": "0.0.0"
   },
   "collective": {
     "type": "opencollective",
