--- a/packages/polar-desktop-app/package.json
+++ b/packages/polar-desktop-app/package.json
@@ -59,7 +59,7 @@
     "polar-karma": "0.0.0",
     "polar-typescript": "0.0.0",
     "polar-webpack": "0.0.0",
-    "source-map-support": "=0.5.19",
+    "source-map-support": "=0.5.19"
   },
   "dependencies": {
     "polar-shared": "0.0.0",
