--- a/packages/polar-electron-framework/package.json
+++ b/packages/polar-electron-framework/package.json
@@ -25,6 +25,7 @@
     "polar-webpack": "0.0.0"
   },
   "dependencies": {
-    "electron": "=12.0.2"
+    "electron": "=12.0.2",
+    "polar-shared": "0.0.0"
   }
 }
