--- a/packages/polar-bookshelf/package.json
+++ b/packages/polar-bookshelf/package.json
@@ -191,6 +191,7 @@
     "polar-text-highlighter": "0.0.0",
     "polar-web-extension-api": "0.0.0",
     "polar-webapp-links": "0.0.0",
+    "polar-electron-framework": "0.0.0",
     "@material-ui/core": "=4.11.3",
     "@material-ui/icons": "=4.11.2",
     "@material-ui/lab": "=4.0.0-alpha.57",
@@ -227,7 +228,6 @@
     "use-local-storage-state": "=6.0.0",
     "uuid": "3.3.3",
     "typemoq": "=2.1.0",
-    "throttle-debounce": "=3.0.1",
-    "polar-electron-framework": "0.0.0"
+    "throttle-debounce": "=3.0.1"
   }
 }
