--- a/packages/polar-bookshelf/package.json
+++ b/packages/polar-bookshelf/package.json
@@ -36,7 +36,7 @@
     "citest": "RESULT=\"$(find . -name '**Test.js' -o -name '**TestN.js' -o -name '**TestNK.js' -not -path 'node_modules/*')\" && if [ -z \"$RESULT\" ]; then echo 'No tests'; else yarn run mocha; fi;",
     "cimocha": "mocha -p --retries 1 --reporter xunit --reporter-option output=test_results.xml --jobs=1 --timeout 60000 --exit './{,!(node_modules)/**}/*Test.js' './{,!(node_modules)/**}/*TestN.js' './{,!(node_modules)/**}/*TestNK.js'",
     "cieslint": "eslint -c ./.eslintrc.json -f compact . --no-error-on-unmatched-pattern",
-    "cypress-desktop-chrome": "npx cypress run --env WIDTH=1920,HEIGHT=1080 --browser chrome"
+    "cypress-desktop-chrome": "npx cypress run --record --key 63fdd419-e3fd-420f-992c-30154fc76121 --env WIDTH=1920,HEIGHT=1080 --browser chrome"
   },
   "repository": "https://github.com/burtonator/polar-bookshelf",
   "keywords": [
