--- a/packages/polar-block-permissions/package.json
+++ b/packages/polar-block-permissions/package.json
@@ -34,7 +34,6 @@
     "polar-blocks": "0.0.0",
     "polar-firebase": "0.0.0",
     "polar-firestore-like": "0.0.0",
-    "polar-shared": "0.0.0",
-    "firebase-functions": "=3.16.0"
+    "polar-shared": "0.0.0"
   }
 }
