--- a/packages/polar-bookshelf/package.json
+++ b/packages/polar-bookshelf/package.json
@@ -193,10 +193,7 @@
     "react-fast-compare": "=3.2.0",
     "react-ga": "=2.5.6",
     "react-helmet": "=6.1.0",
-    "react-hotkeys": "=2.0.0",
     "react-intersection-observer": "=8.30.1",
-    "react-joyride": "=2.2.1",
-    "react-json-view": "=1.19.1",
     "react-moment": "=0.9.7",
     "react-rnd": "=10.2.3",
     "react-router-dom": "=5.2.0",
@@ -225,10 +222,6 @@
     "react-dom": "=17.0.2",
     "@material-ui/styles": "=4.11.4",
     "re-resizable": "=6.6.1",
-    "@nivo/core": "=0.61.0",
-    "electron": "=12.0.2",
-    "electron-updater": "=4.3.8",
-    "builder-util-runtime": "=8.9.2",
-    "universal-analytics": "=0.5.0"
+    "@nivo/core": "=0.61.0"
   }
 }
