--- a/packages/polar-firebase-users/package.json
+++ b/packages/polar-firebase-users/package.json
@@ -31,8 +31,7 @@
     "polar-shared": "0.0.0",
     "polar-firebase": "0.0.0",
     "polar-firebase-admin": "0.0.0",
-    "polar-firestore-like": "0.0.0",
-    "firebase-functions": "=3.16.0"
+    "polar-firestore-like": "0.0.0"
   },
   "peerDependencies": {
     "firebase": "=8.10.0",
