add script for dumping modules packages

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,6 @@ test_results.xml
 # local testing scripts to ignore
 scripts/test.sh
 scripts/node-script.js
+
+# ignore script output
+module-packages-output.json
