--- a/packages/polar-shared/package.json
+++ b/packages/polar-shared/package.json
@@ -35,7 +35,6 @@
     "@types/node-fetch": "2.5.7",
     "@types/stopword": "=0.3.0",
     "@types/twitter-text": "=2.0.0",
-    "@types/uuid": "3.4.5",
     "chai": "4.2.0",
     "mocha": "=9.1.1",
     "polar-test": "0.0.0",
@@ -51,8 +50,7 @@
     "node-fetch": "=2.6.1",
     "stopword": "=0.3.4",
     "timekeeper": "2.2.0",
-    "twitter-text": "=3.1.0",
-    "uuid": "3.3.3"
+    "twitter-text": "=3.1.0"
   },
   "files": [
     "**/*.js",
