--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -280,6 +280,7 @@ jobs:
     steps:
       - attach_workspace:
           at: ~/
+      - global_modules_setup
       - run:
           name: cdk deploy
           command: |
