--- a/packages/polar-hooks/functions/package.json
+++ b/packages/polar-hooks/functions/package.json
@@ -92,7 +92,7 @@
     "@types/mocha": "=9.0.0",
     "@types/node": "=14.17.9",
     "@types/stripe": "=6.32.13",
-    "@types/react": "17.0.2",
+    "@types/react": "=17.0.2",
     "chai": "4.2.0",
     "mocha": "=9.1.1",
     "polar-test": "0.0.0",
