--- a/packages/polar-firebase-admin/package.json
+++ b/packages/polar-firebase-admin/package.json
@@ -28,6 +28,7 @@
     "polar-test": "0.0.0"
   },
   "dependencies": {
+    "@google-cloud/firestore": "=4.15.1",
     "@google-cloud/storage": "=5.8.5",
     "firebase-admin": "=10.0.0",
     "polar-firebase": "0.0.0",
