--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,9 +9,18 @@ orbs:
 # @ Define Custom Executors
 executors:
   # ! Default Executor for most jobs
+  large:
+    docker:
+      - image: polarciops/ci:latest
+        auth:
+          username: $DOCKER_HUB_USER
+          password: $DOCKER_HUB_PASSWORD
+    resource_class: large
+
+  # ! Hefty Jobs like Deployment
   xlarge:
     docker:
-      - image: getpolarized/ci:latest
+      - image: polarciops/ci:latest
         auth:
           username: $DOCKER_HUB_USER
           password: $DOCKER_HUB_PASSWORD
@@ -20,7 +29,7 @@ executors:
   # ! Android Jobs
   android:
     docker:
-      - image: circleci/android:api-30-node
+      - image: cimg/android:2021.10.2-node
     resource_class: xlarge
 
   # ! Cypress Jobs
@@ -31,23 +40,6 @@ executors:
 
 # @ Pre-Script Steps to Execute before Jobs
 commands:
-  # & Tag Publishing Setup
-  tag_publishing_setup:
-    description: Tag Publishing Setup
-    steps:
-      # ! Install Go,ghr,config git
-      - run:
-          name: Tag Publishing Setup
-          command: |
-            mkdir ~/.ssh
-            sudo apt install golang-go
-            go get -u github.com/tcnksm/ghr
-            export GOPATH="$HOME/go"
-            PATH="$GOPATH/bin:$PATH"
-            ssh-keyscan github.com >> ~/.ssh/known_hosts
-            git config --global user.email "$CI_PUBLISHER_EMAIL"
-            git config --global user.name "$CI_PUBLISHER_NAME"
-
   # & Publishing setup steps
   publishing_setup:
     description: set the SSH keys and Hashes required to deploy
@@ -60,20 +52,6 @@ commands:
             - "16:e3:06:7e:6e:58:07:3a:20:35:14:c3:7e:98:33:bb"
             - "SHA256:uwzneTU1Stml8f1GDcffUJPK6GxSs77+vMZOHopRJLE burton@getpolarized.io"
 
-  # & Install Global Modules
-  global_modules_setup:
-    description: install global modules
-    steps:
-      # ! Install Basic Modules { pnpm, npm, firebase tools }
-      - run:
-          name: Install global node_modules
-          command: |
-            sudo yarn global add pnpm
-            sudo pnpm add npm@7.19.1 --global
-            sudo pnpm add firebase-tools@9.16.0 --global
-            sudo pnpm add only-allow --global
-            sudo pnpm add semver --global
-
   # & Download/Restore pnpm-lock.yaml cache
   restore_pnpm_cache:
     description: Restore all bootstraped module
@@ -82,34 +60,10 @@ commands:
           keys:
             - pnpm-packages-v1-{{ .Branch }}-{{ checksum "pnpm-lock.yaml" }}
 
-  # & Install Required Linux Binary (libvips is needed by sharp which is needed by gatsby)
-  install_linux_dependencies:
-    description: Download/Install all our linux Dependencies/Binaries
-    steps:
-      - run:
-          name: Required Linux packages
-          command: if [ "$OSTYPE" = 'linux-gnu' ]; then sudo apt update -y && sudo apt install libvips libvips-dev pngquant -y; fi
-
   # & output debug info
   debug_installed:
     description: Debug installed libraries/modules
     steps:
-      # ? Debug Step for Node/Npm/Pnpm/Firebase Versions
-      - run:
-          name: DEBUG(Node, NPM, PNPM & Firebase Versions)
-          command: |
-            echo -e "Node version: $(node --version) \n"
-            echo -e "NPM version: $(npm --version) \n"
-            echo -e "Pnpm version: $(pnpm --version) \n"
-            echo -e "firebase version: $(firebase --version) \n"
-
-      # ? Debug Step for OS version
-      - run:
-          name: DEBUG(OS Environment)
-          command: |
-            echo $OSTYPE
-            uname -a
-
       # ? Debug step for Npm/Pnpm Configuration
       - run:
           name: DEBUG(NPM/Pnpm Setup)
@@ -118,8 +72,6 @@ commands:
             cat ~/.npmrc
             echo "npm ping: ======"
             npm ping
-            echo "npm config ls -l: ======"
-            npm config ls -l
             echo "pnpm config list: ======"
             pnpm config list
 
@@ -208,10 +160,8 @@ jobs:
     executor: << parameters.executor>>
     description: build the application for all the following steps
     steps:
-      - global_modules_setup
       - checkout
       - restore_pnpm_cache
-      - install_linux_dependencies
       - debug_installed
       - bootstrap
       - compile
@@ -226,7 +176,6 @@ jobs:
     executor: << parameters.executor>>
     description: Check the code Code-Quality
     steps:
-      - global_modules_setup
       - checkout
       - restore_pnpm_cache
       - bootstrap
@@ -243,17 +192,10 @@ jobs:
     steps:
       - attach_workspace:
           at: ~/
-      - global_modules_setup
       - run:
           name: karma
-          ##
-          # Increase this as I think we might have to let mocha timeout to get the core error
-          # BUT it can't because CircleCI times out first.
           no_output_timeout: 120m
-          command: |
-            sudo apt update -y && sudo apt install chromium --fix-missing -y
-            export CHROME_BIN='/usr/bin/chromium'
-            pnpm run karma-all
+          command: pnpm run karma-all
       - store_test_results:
           path: /home/circleci/project/packages
 
@@ -265,14 +207,11 @@ jobs:
     executor: << parameters.executor>>
     description: "Run our karma tests in the browser."
     steps:
-      - global_modules_setup
       - attach_workspace:
           at: ~/
       - run:
           name: test
-          command: |
-            cd /home/circleci/project
-            pnpm run test-ci-all
+          command: (cd /home/circleci/project && pnpm run test-ci-all)
       - store_test_results:
           path: /home/circleci/project/packages
 
@@ -284,15 +223,11 @@ jobs:
     executor: << parameters.executor>>
     description: "Build the polar chrome extension"
     steps:
-      - global_modules_setup
       - attach_workspace:
           at: ~/
       - run:
           name: Build
-          command: |
-            cd /home/circleci/project/packages/polar-web-extension/
-            export POLAR_EXTENSION_TYPE=PROD
-            pnpm run dist
+          command: (cd /home/circleci/project/packages/polar-web-extension/ && pnpm run dist)
 
   # @ Deploy aws CDK changes
   aws-cdk:
@@ -303,12 +238,11 @@ jobs:
     steps:
       - attach_workspace:
           at: ~/
-      - global_modules_setup
+
       - run:
           name: cdk deploy
           command: |
-            cd /home/circleci/project/packages/polar-cdk
-            ENV_NAME=master npx cdk deploy --all --require-approval=never
+            cd /home/circleci/project/packages/polar-cdk && pnpm dlx cdk deploy --all --require-approval=never
 
   # @ Build Polar-Bookshelf Webapp
   build-polar-app:
@@ -317,18 +251,11 @@ jobs:
         type: executor
     executor: << parameters.executor>>
     steps:
-      - global_modules_setup
       - attach_workspace:
           at: ~/
       - run:
           name: Build webapp
-          command: |
-            set -e
-            cd /home/circleci/project/packages/polar-bookshelf
-            free -m
-            pnpm run build-webapp
-            echo "Webapp Built Successfully"
-
+          command: pnpm run build
       - run:
           name: Verify webapp budget
           command: |
@@ -373,9 +300,7 @@ jobs:
         type: string
     executor: << parameters.executor>>
     steps:
-      - global_modules_setup
       - publishing_setup
-      - tag_publishing_setup
       - attach_workspace:
           at: ~/
       - run:
@@ -485,7 +410,6 @@ jobs:
     executor: << parameters.executor >>
     description: Build node Environment
     steps:
-      - global_modules_setup
       - checkout
       - run:
           name: isolate
@@ -778,5 +702,3 @@ workflows:
           requires:
             - Approve-IOS-Release
             - build-setup
-
-      # write a job that echos hello world
