enable karma execution in container

--- a/package.yaml
+++ b/package.yaml
@@ -7,7 +7,7 @@ private: true
 
 scripts:
     "preinstall": "only-allow pnpm"
-    "bash": "docker build --build-arg USER_ID=$(id -u) --build-arg GROUP_ID=$(id -g) -f Dockerfile -t polar . && docker run -v $(pwd):/polar-app:delegated -w /polar-app -u $(id -u ${USER}):$(id -g ${USER}) -e WEBPACK_BUNDLE=repository -p 8050:8050 -p 8051:8051 -ti --rm --init --ulimit memlock=819200000:819200000 polar bash"
+    "bash": "docker build --build-arg USER_ID=$(id -u) --build-arg GROUP_ID=$(id -g) -f Dockerfile -t polar . && docker run -v $(pwd):/polar-app:delegated -w /polar-app -u $(id -u ${USER}):$(id -g ${USER}) -e WEBPACK_BUNDLE=repository -p 8050:8050 -p 8051:8051 -ti --rm --init --ulimit memlock=819200000:819200000 --privileged polar bash"
     "eslint-all": "pnpm m run eslint --no-bail"
     "eslint-ci-all": "pnpm m run eslint-ci --no-bail"
     "compile-all": "pnpm m run compile"
