--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -179,6 +179,9 @@ jobs:
       - checkout
       - restore_pnpm_cache
       - bootstrap
+      - run:
+          name: eslint
+          command: pnpm run eslint-ci-all
       - eslint_diff
       - check_duplicates
 
