--- a/packages/polar-capture/package.json
+++ b/packages/polar-capture/package.json
@@ -20,10 +20,13 @@
   "dependencies": {
     "@types/node-fetch": "2.5.7",
     "polar-web-capture": "0.0.0",
-    "node-fetch": "=2.6.1"
+    "node-fetch": "=2.6.1",
+    "polar-shared": "0.0.0",
+    "polar-hooks": "0.0.0",
+    "polar-pdf": "0.0.0",
+    "polar-epub": "0.0.0",
+    "@google-cloud/storage": "=5.8.5"
   },
   "devDependencies": {
-    "polar-eslint": "0.0.0",
-    "polar-typescript": "0.0.0"
   }
 }
