--- a/packages/polar-bookshelf/package.json
+++ b/packages/polar-bookshelf/package.json
@@ -103,7 +103,13 @@
         "wait-for-expect": "3.0.1",
         "workbox-cli": "=5.1.3",
         "polar-test": "0.0.0",
-        "@testing-library/react": "=12.1.2"
+        "@testing-library/react": "=12.1.2",
+        "storybook": "=6.4.1",
+        "@storybook/addon-links": "=6.4.1",
+        "@storybook/addon-essentials":  "=6.4.1",
+        "storybook-dark-mode": "=1.0.8",
+        "@storybook/addon-viewport": "=6.4.1"
+
     },
     "dependencies": {
         "@antv/g6": "=4.3.5",
