--- a/packages/polar-capture/package.json
+++ b/packages/polar-capture/package.json
@@ -28,7 +28,7 @@
     "@google-cloud/storage": "=5.8.5",
     "polar-firebase-admin": "0.0.0",
     "jsdom": "=16.7.0",
-    "polar-epub-capture": "0.0.0"
+    "polar-epub-generator": "0.0.0"
   },
   "devDependencies": {
   }
