--- a/packages/polar-bookshelf/package.json
+++ b/packages/polar-bookshelf/package.json
@@ -103,7 +103,9 @@
         "wait-for-expect": "3.0.1",
         "workbox-cli": "=5.1.3",
         "polar-test": "0.0.0",
-        "@testing-library/react": "=12.1.2"
+        "@testing-library/react": "=12.1.2",
+        "@storybook/react": "=6.4.8",
+        "storybook": "=6.4.8"
     },
     "dependencies": {
         "@antv/g6": "=4.3.5",
