--- a/packages/polar-bookshelf/package.json
+++ b/packages/polar-bookshelf/package.json
@@ -105,7 +105,11 @@
         "polar-test": "0.0.0",
         "@testing-library/react": "=12.1.2",
         "@storybook/react": "=6.4.8",
-        "storybook": "=6.4.8"
+        "storybook": "=6.4.8",
+        "@storybook/addon-links": "=6.4.8",
+        "@storybook/addon-essentials":  "=6.4.8",
+        "storybook-dark-mode": "=1.0.8",
+        "@storybook/addon-viewport": "=6.4.8"
     },
     "dependencies": {
         "@antv/g6": "=4.3.5",
